# green_data

./: LICENSE  README.md  pyproject.toml
src/: green_manifesto.ipynb  grundsatzprogramm.ipynb
