[tool.poetry]
name = "green_data"
version = "0.1.0"
description = ""
authors = ["Robert Meissner <robert.meissner@codecentric.de>"]

[tool.poetry.dependencies]
python = "^3.9"
textract = "^1.6.5"
jupyter = "^1.0.0"
requests = "^2.28.0"
pdfminer = "^20191125"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
