[tool.poetry]
name = "green_data"
version = "0.1.0"
description = ""
authors = ["Robert Meissner <robert.meissner@codecentric.de>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
textract = "^1.6.5"
jupyter = "^1.0.0"
requests = "^2.28.0"
pdfminer = "^20191125"
spacy = "^3.3.1"
keras = "^2.9.0"
tensorflow = "^2.9.3"
nltk = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
